@@ -73,7 +73,9 @@ AC_SUBST(KINEOPATHPLANNER_LIBS)
 AC_SUBST(KINEO_ADDON_BUILDER,
 	[${KINEOPATHPLANNER_PREFIX}/bin/KineoAddonBuilder])
 AC_SUBST(KINEO_MODULE_DIR, ["x${KINEOPATHPLANNER_PREFIX}/modules"])
-AC_SUBST(KINEO_LIBDIR,[${KINEOPATHPLANNER_PREFIX}/lib])
+
+AC_SUBST(KINEO_PREFIX, [${KINEOPATHPLANNER_PREFIX}])
+AC_SUBST(KINEO_LIBDIR, [${KINEOPATHPLANNER_PREFIX}/lib])
 
 # HPP packages
 define(hppcore_reqd, [hppCore >= 1.8])
